# discord-archiver-bot

discord-archive/: Cargo.toml  general.txt
discord-archive/src/: backup.rs  main.rs
