[package]
name = "discord-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
